# flowreg-session-gui

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: pypi-release.yml
src/pyflowreg_session_gui/: __init__.py  app.py  config_form.py  config_io.py  config_tab.py  local_runner.py  main_window.py  model_utils.py  pyflowreg_api.py  remote_runner.py  run_local_tab.py  run_remote_tab.py  serialization.py  state.py
